<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Fuatee</string>
    <string name="tab_noe">首页</string>
    <string name="tab_two">讯息</string>
    <string name="tab_three">产品</string>
    <string name="tab_four">我的</string>
    <string name="circle">圈子</string>
    <string name="hint_net_fail">网络无连接</string>
    <string name="hint_service">网络连接异常,请稍后再试...</string>
    <string name="text_temp">测试文本</string>
    <string name="goto_main">马上体验</string>
    <string name="home_page_name">FuateeAPP</string>
    <string name="news_name">资讯新闻</string>
    <string name="register_name">注册</string>
    <string name="kivie_login">Fuatee登录</string>
    <string name="setting">设置</string>
    <string name="shipping_address">收货地址</string>
    <string name="change_password">修改密码</string>
    <string name="agency_apply">代理升级</string>
    <string name="my_order">我的订单</string>
    <string name="my_performance">我的业绩</string>
    <string name="store_management">仓库管理</string>
    <string name="pick_up">提货管理</string>
    <string name="size_adjust">尺码调整</string>
    <string name="my_certificate">我的证书</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="help_centre">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="user_center">个人中心</string>
    <string name="agency_query">代理查询</string>
    <string name="agency_list">代理列表</string>
    <string name="team_grade">团队业绩</string>
    <string name="my_balance">我的余额</string>
    <string name="product">产品</string>
    <string name="clearing">结算</string>
    <string name="cart">购物车</string>
    <string name="total_text">合计金额:</string>
    <string name="alter_order">保存修改</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="OK">确认</string>
    <string name="ok_delete_address">确认删除该地址吗？</string>
    <string name="close">关闭</string>
    <string name="splash_enter">点击进入</string>
    <string name="commodity_guanli">商品管理</string>
    <string name="commodity_details">商品详情</string>
    <string name="commodity_introduce">商品介绍</string>
    <string name="order_management">我的订单</string>
    <string name="all_order">全部</string>
    <string name="affirm">已确认</string>
    <string name="stay_pay">待付款</string>
    <string name="stay_ok">待确认</string>
    <string name="already_shipments">已发货</string>
    <string name="stay_shipments">待发货</string>
    <string name="shipments_loading">发货中</string>
    <string name="order_over">已完成</string>
    <string name="pay_money">已付款</string>
    <string name="is_cancel">已取消</string>
    <string name="affirm_shipments">确认发货</string>
    <string name="my_pickup_goods">我的提货单</string>
    <string name="home_web">Fuatee公告</string>
    <string name="company_news">公司新闻</string>
    <string name="company_system">公司制度</string>
    <string name="home_carousel">首页轮播</string>
    <string name="course">教程</string>
    <string name="noData">暂无数据</string>
    <string name="user_name">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="password_two">重复密码</string>
    <string name="referrer">推荐人</string>
    <string name="promptly_register">注册</string>
    <string name="verify">验证</string>
    <string name="verify_code">验证码</string>
    <string name="verify_code_ok">验证码已发送</string>
    <string name="get_verify">获取验证码</string>
    <string name="account">账号</string>
    <string name="login_hint">电话/邮箱/代理商编号</string>
    <string name="apply_agent">代理商申请</string>
    <string name="agent_content">代理商信息</string>
    <string name="agent_number">代理编号:</string>
    <string name="agent_name">代理姓名:</string>
    <string name="agent_phone">代理电话:</string>
    <string name="import_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="kivie_protocol">《Fuatee协议》</string>
    <string name="kivie_protocol_titile">Fuatee协议</string>
    <string name="quick_register">快速注册</string>
    <string name="find_password">找回密码</string>
    <string name="regard_kivie">关于Fuatee</string>
    <string name="seting">设置</string>
    <string name="clean">清除缓存</string>
    <string name="app_update">版本更新</string>
    <string name="quit_login">退出当前账号</string>
    <string name="introduce">下单</string>
    <string name="plus_shopping_cart">加入购物车</string>
    <string name="plus_pick_up_cart">保存</string>
    <string name="plus_adjust_cart">提交</string>
    <string name="delete">删除</string>
    <string name="delete_one">请逐条单选删除</string>
    <string name="location_manager">地址管理</string>
    <string name="add_location">添加</string>
    <string name="new_location">添加新地址</string>
    <string name="save_location">保存地址</string>
    <string name="consignee_name">收货人姓名</string>
    <string name="consignee_phone">收货人电话</string>
    <string name="consignee_people">收货人:</string>
    <string name="consignee_area">所在区域</string>
    <string name="consignee_adders">详细地址</string>
    <string name="yes_no_default">是否设置为默认地址</string>
    <string name="look_adders">查看物流</string>
    <string name="delete_order">删除订单</string>
    <string name="delete_ok">删除成功</string>
    <string name="orders_number">件商品,</string>
    <string name="orders_moneys">共￥</string>
    <string name="addressee">收件人:</string>
    <string name="address">地址:</string>
    <string name="order_numbers">订单编号:</string>
    <string name="order_type">订单类型:</string>
    <string name="order_state">订单状态:</string>
    <string name="order_count">订单数量:</string>
    <string name="order_money">订单金额:</string>
    <string name="order_time">下单时间:</string>
    <string name="order_details">订单详情</string>
    <string name="balance_deduction">余额抵扣</string>
    <string name="inventory">商品清单</string>
    <string name="total_money">合计:</string>
    <string name="my_warehouse">我的仓库</string>
    <string name="commodity_stocks">商品库存</string>
    <string name="style_number">款式数量:</string>
    <string name="size">尺码</string>
    <string name="en_route">在途</string>
    <string name="stocks">库存</string>
    <string name="surplus_stocks">剩余库存</string>
    <string name="on_order">在单</string>
    <string name="results_inquire">业绩查询</string>
    <string name="sum_results">总业绩</string>
    <string name="team_results">内衣业绩</string>
    <string name="results_detail">业绩明细</string>
    <string name="former_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="change_ok">修改成功</string>
    <string name="click_login">点击登录</string>
    <string name="click_register">免费注册</string>
    <string name="welcome_kivie">欢迎来到Fuatee</string>
    <string name="no_protocol">用户协议为必选!否则将无法登录!</string>
    <string name="login_ok">登录成功</string>
    <string name="register_ok">注册成功</string>
    <string name="clear_ok">清理成功</string>
    <string name="verify_ok">验证通过</string>
    <string name="verify_no">没有该代理人</string>
    <string name="verify_null">手机号码不能为空!</string>
    <string name="please_verify">请先验证代理人</string>
    <string name="please_login">您还未登陆</string>
    <string name="two_password">两次密码不一致!请重新输入</string>
    <string name="phone_number_no">手机号有误!请重新输入</string>
    <string name="phone_number_null">手机号码不能为空</string>
    <string name="user_no_null">用户名不能为空!</string>
    <string name="add_pick_up">增加提货单</string>
    <string name="order_no">取消订单</string>
    <string name="yes_order_no">确认取消该订单</string>
    <string name="yes_delete_order">确认删除该订单</string>
    <string name="yes_confirm_order">是否确认收货</string>
    <string name="cancel_ok">取消成功</string>
    <string name="sum_pick">总提货：</string>
    <string name="pick_up_number">提货数量</string>
    <string name="adjust_up_number">换货数量</string>
    <string name="buy_number">购买数量</string>
    <string name="submit">提交(0)</string>
    <string name="submit_order">提交订单</string>
    <string name="new_lading">新增提货单</string>
    <string name="plus_ok">保存成功</string>
    <string name="card_number_hint">请输入正确的身份证号码！</string>
    <string name="you_is_agent">你已经是代理商！</string>
    <string name="submit_ok">提交成功</string>
    <string name="remark">备注</string>
    <string name="remark_hint">如有备注请填写（选填）</string>
    <string name="pay_order">支付订单</string>
    <string name="pay_affirm">支付确认</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_ccb">建行支付</string>
    <string name="pay_jd">京东支付</string>
    <string name="pay_image">上传截图</string>
    <string name="pay_images">支付截图</string>
    <string name="pay_mode">支付方式</string>
    <string name="pay">支付</string>
    <string name="refresh_pay">点我 \n刷新支付状态</string>
    <string name="alipay_over">支付宝支付完成后，请刷新支付状态</string>
    <string name="pay_issue">返回</string>
    <string name="pay_OK">支付成功</string>
    <string name="please_plus_image">请添加支付截图</string>
    <string name="size_adjust_bill">尺码调整单</string>
    <string name="plus_size_adjust">增加尺码调整单</string>
    <string name="synthetical_adjust_count">调整后换货数量必须为0</string>
    <string name="common_issue">常见问题</string>
    <string name="head">头像</string>
    <string name="grade">等级</string>
    <string name="agency_numbers">代理编号</string>
    <string name="email">Email</string>
    <string name="WeCha">微信</string>
    <string name="collect_content">收款资料</string>
    <string name="information_edit_camera">拍摄</string>
    <string name="information_edit_album">从手机相册选择</string>
    <string name="hint_revise_success">修改成功</string>
    <string name="alter_location">修改地址</string>
    <string name="please_perfect_message">请将信息填写完整</string>
    <string name="please_correct_password">请输入正确的密码</string>
    <string name="new_former_password">新旧密码一致哦,换一个新密码呗!</string>
    <string name="two_new_password">两次新密码不一致,请重新输入!</string>
    <string name="again_exit">再按一次退出应用</string>
    <string name="no_data">没有正确的换货数据</string>
    <string name="no_address">还没有地址,快去添加一个吧</string>
    <string name="no_default">没有默认地址,快去选择一个地址吧</string>
    <string name="location_province_select">选择省份</string>
    <string name="location_city_select">选择城市</string>
    <string name="location_area">选择区域</string>
    <string name="add_ok">添加成功</string>
    <string name="dialog_password">密码支持6-12位数字、字母、符号</string>
    <string name="name">真实姓名</string>
    <string name="phone">电话号码</string>
    <string name="delete_image">&#160;&#160;删除</string>
    <string name="pick_up_details">提货单详情</string>
    <string name="cart_null">购物车空空如也,快去选购吧!</string>
    <string name="feed_back_hint">请描述您要提交的问题或意见</string>
    <string name="report_hint">请描述您要举报的内容</string>
    <string name="issue_and_feedback">问题和意见</string>
    <string name="report_content">举报内容</string>
    <string name="query">查询</string>
    <string name="agency_name">代理名称:</string>
    <string name="agency_number">代理编号:</string>
    <string name="agency_lv">代理等级:</string>
    <string name="phones">手机号码:</string>
    <string name="search">搜索</string>
    <string name="toolbar_search">请输入代理编号</string>
    <string name="weXin">微&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;信:</string>
    <string name="look_over">查看上级</string>
    <string name="look_lower">查看下级</string>
    <string name="you_have_no_right">你没有权限查看</string>
    <string name="market_manage">销售管理</string>
    <string name="express_company">快递公司</string>
    <string name="express_number">快递单号</string>
    <string name="save_number">保存单号</string>
    <string name="send">发送</string>
    <string name="comment_write_hint">说点什么吧....</string>
    <string name="comment_one">评一下</string>
    <string name="input_new_password">请输入6位新密码</string>
    <string name="please_affirm_password">请确认6位密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="please_verify_code">请输入验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_alter">确认修改</string>
    <string name="agency_apply_for_hint">您将申请升级至下一级别,将由您的上级和公司进行审核。如审核通过,请生成新的证书。</string>
    <string name="register_name_digits">
    ._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ!@#$%^*_+-=*/

    </string>
</resources>