<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    tools:context="com.Store.www.ui.activity.AlterPayPasswordActivity">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_40dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/divider_15dp"
        android:paddingRight="@dimen/divider_15dp">

        <TextView
            android:layout_width="@dimen/icon_height"
            android:layout_height="match_parent"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/buttombarText"
            android:text="@string/new_password"
            android:gravity="center|left"/>


        <EditText
            android:id="@+id/et_alter_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/divider_10dp"
            android:textColor="@color/buttombarText"
            android:textSize="@dimen/large_text_size"
            android:hint="@string/input_new_password"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:background="@color/windowBackground"/>


    </LinearLayout>

    <View
        style="@style/divider_horizontal2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_40dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/divider_15dp"
        android:paddingRight="@dimen/divider_15dp">

        <TextView
            android:layout_width="@dimen/icon_height"
            android:layout_height="match_parent"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/buttombarText"
            android:text="@string/confirm_password"
            android:gravity="center|left"/>


        <EditText
            android:id="@+id/et_again_input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/divider_10dp"
            android:textColor="@color/buttombarText"
            android:hint="@string/please_affirm_password"
            android:textSize="@dimen/large_text_size"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:background="@color/windowBackground"/>


    </LinearLayout>

    <View
        style="@style/divider_horizontal2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_40dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/divider_15dp"
        android:paddingRight="@dimen/divider_15dp">

        <TextView
            android:layout_width="@dimen/icon_height"
            android:layout_height="match_parent"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/buttombarText"
            android:text="@string/phone_number"
            android:gravity="center|left"/>


        <EditText
            android:id="@+id/et_alter_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/divider_10dp"
            android:textColor="@color/buttombarText"
            android:textSize="@dimen/large_text_size"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:background="@color/windowBackground"/>


    </LinearLayout>

    <View
        style="@style/divider_horizontal2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_40dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/divider_15dp"
        android:paddingRight="@dimen/divider_15dp">

        <TextView
            android:layout_width="@dimen/icon_height"
            android:layout_height="match_parent"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/buttombarText"
            android:text="@string/verify_code"
            android:gravity="center|left"/>


        <EditText
            android:id="@+id/et_alter_verify_code"
            android:layout_width="@dimen/actionBarSize"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/divider_10dp"
            android:textColor="@color/buttombarText"
            android:textSize="@dimen/large_text_size"
            android:hint="@string/please_verify_code"
            android:inputType="number"
            android:background="@color/windowBackground"/>

        <View
             style="@style/weight_1"/>

        <Button
            android:id="@+id/btn_pay_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/get_verify"
            android:textColor="@color/windowBackground"
            android:textSize="@dimen/small_text_size"
            android:gravity="center"
            android:padding="@dimen/drawablePadding_5dp"
            android:layout_marginTop="@dimen/drawablePadding_5dp"
            android:layout_marginBottom="@dimen/drawablePadding_5dp"
            android:background="@drawable/shape_button_orders"/>


    </LinearLayout>

    <View
        style="@style/divider_horizontal2"/>


    <Button
        android:id="@+id/btn_confirm_alter_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_40dp"
        android:background="@drawable/shape_button_orders"
        android:layout_marginLeft="@dimen/divider_20dp"
        android:layout_marginRight="@dimen/divider_20dp"
        android:textColor="@color/windowBackground"
        android:textSize="@dimen/large_text_size"
        android:text="@string/confirm_alter"
        android:layout_marginTop="@dimen/divider_80dp"/>

</LinearLayout>
