<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/windowBackgroundWhite"
              android:divider="@drawable/divider"
              android:orientation="vertical"
              android:showDividers="middle|beginning">


    <TextView
        android:id="@+id/tv_information_edit_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/information_edit_camera"
        android:textColor="@color/textColorGold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_information_edit_album"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/information_edit_album"
        android:textColor="@color/textColorGold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_information_edit_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/textColorGold"
        android:textSize="18sp"/>
</LinearLayout>
