<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.Store.www.ui.activity.RegisterActivity">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_text_frame"
            android:layout_marginLeft="@dimen/drawablePadding_5dp"
            android:layout_marginRight="@dimen/drawablePadding_5dp"
            android:layout_marginTop="@dimen/divider_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/user_name"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="@dimen/divider_10dp"/>

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:hint="@string/name"
                    android:layout_marginLeft="20dp"
                    android:textSize="@dimen/ysf_text_size_13"/>

            </LinearLayout>

            <View
                style="@style/divider_horizontal2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/phone_number"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="@dimen/divider_10dp"/>

                <EditText
                    android:id="@+id/et_user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/phone"
                    android:maxLength="11"
                    android:inputType="number"
                    android:textSize="@dimen/ysf_text_size_13"/>

            </LinearLayout>

            <View
                style="@style/divider_horizontal2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/password"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="@dimen/divider_10dp"/>

                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:digits="@string/register_name_digits"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/password"
                    android:textSize="@dimen/ysf_text_size_13"/>

            </LinearLayout>

            <View
                style="@style/divider_horizontal2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/password_two"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="@dimen/divider_10dp"/>

                <EditText
                    android:id="@+id/et_user_password_two"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:layout_marginLeft="20dp"
                    android:maxLength="12"
                    android:digits="@string/register_name_digits"
                    android:inputType="textPassword"
                    android:hint="@string/password_two"
                    android:textSize="@dimen/ysf_text_size_13"/>

            </LinearLayout>

            <View
                style="@style/divider_horizontal2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/referrer"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="@dimen/divider_10dp"/>

                <EditText
                    android:id="@+id/et_user_referrer"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:textSize="@dimen/ysf_text_size_13"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>



                <Button
                    android:id="@+id/btn_code"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:background="@drawable/select_button_square"
                    android:gravity="center"
                    android:text="@string/verify"
                    android:layout_marginRight="@dimen/drawablePadding_5dp"
                    android:textColor="@color/textColorWhite"
                    android:textSize="@dimen/small_text_size" />

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:enabled="false"
                android:background="@drawable/select_button_square"
                android:textColor="@color/textColorWhite"
                android:text="@string/promptly_register"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>
