<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_apply_for_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_margin"
            android:textColor="@color/textColorBlack"
            android:textSize="18sp"
            android:text="@string/text_temp"/>

        <TextView
            android:id="@+id/tv_apply_for_context"
            android:layout_marginTop="@dimen/divider_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/divider_20dp"
            android:layout_marginRight="@dimen/divider_20dp"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/textColorBlack"
            android:text="@string/agency_apply_for_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space style="@style/weight_1"/>

            <Button
                android:id="@+id/btn_apply_for_dialog_cancel"
                style="@style/buttonPopGold"
                android:layout_marginBottom="@dimen/dialog_margin"
                android:layout_marginTop="@dimen/dialog_margin"
                android:background="@drawable/selector_smallbutton_gold"
                android:text="@string/cancel"
                />

            <Space style="@style/weight_1"/>

            <Button
                android:id="@+id/btn_apply_for_dialog_ok"
                style="@style/buttonPopGold"
                android:layout_marginBottom="@dimen/dialog_margin"
                android:layout_marginTop="@dimen/dialog_margin"
                android:background="@drawable/selector_smallbutton_white"
                android:text="@string/confirm"
                android:textColor="@color/redColorBackground"/>

            <Space style="@style/weight_1"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>