<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundGrey"
    android:orientation="vertical"
    tools:context="com.Store.www.ui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="51dp"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/windowBackgroundGrey" />

    <LinearLayout
        android:id="@+id/layout_bottombar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/windowBackground"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_tab_one"
            style="@style/bottomBar"
            android:layout_gravity="center"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/home_ok"
            android:text="@string/tab_noe" />

        <TextView
            android:id="@+id/tv_tab_two"
            style="@style/bottomBar"
            android:layout_gravity="center"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/news_no"
            android:text="@string/tab_two" />

        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_tab_five"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/drawablePadding_5dp"
                android:src="@mipmap/service_icon" />

            <TextView
                android:id="@+id/tv_message_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/drawablePadding_3dp"
                android:background="@drawable/shape_home_message_count"
                android:gravity="center"
                android:text=""
                android:textColor="@color/windowBackground"
                android:textSize="7sp"
                android:visibility="invisible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_tab_five"
            style="@style/bottomBar"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/circle_no"
            android:text="@string/circle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_tab_three"
            style="@style/bottomBar"
            android:layout_gravity="center"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/product_no"
            android:text="@string/tab_three" />


        <TextView
            android:id="@+id/tv_tab_four"
            style="@style/bottomBar"
            android:layout_gravity="center"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/user_no"
            android:text="@string/tab_four" />


    </LinearLayout>

</RelativeLayout>
